--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,4 +30,4 @@ jobs:
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
           git add report.txt
           git commit -am "Automated report"
-          git push
+          git push origin HEAD:origin 
