--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,6 +28,7 @@ jobs:
           git config --global init.defaultBranch  main
           git config --global user.name 'Your Name'
           git config --global user.email 'your-username@users.noreply.github.com'
+          echo "GITHUB_REPOSITORY is <$GITHUB_REPOSITORY>"
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
           git add report.txt
           git commit -am "Automated report"
