HEAD:refs/heads/origin

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,4 +32,4 @@ jobs:
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git
           git add report.txt
           git commit -am "Automated report"
-          git push origin HEAD:origin 
+          git push origin HEAD:refs/heads/origin
